Prevent property names from wrapping

--- a/packages/loom-ui/src/renderer/Editor/ElementEditor/PropertiesEditor/PropertiesEditor.scss
+++ b/packages/loom-ui/src/renderer/Editor/ElementEditor/PropertiesEditor/PropertiesEditor.scss
@@ -68,6 +68,7 @@
     flex-basis: 0;
     flex-shrink: 0;
     font-size: 12px;
+    white-space: nowrap;
     margin-right: 8px;
     line-height: 14px;
     padding: 3px 0;
